<?xml version="1.0"?>
<package format="2">
  <name>service_algorithm</name>
  <version>0.1.0</version>
  <description>The service_algorithm package</description>


  <maintainer email="w2000r@naver.com">w2000r</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>common_messages</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>common_messages</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>common_messages</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>messages_runtime</exec_depend>

</package>
